crates/sm-cli/tests/snapshots/mcp_schema_snapshot_test__mcp_tool@agent_delete.snap
---
source: crates/sm-cli/tests/mcp_schema_snapshot_test.rs
expression: tool
---
{
  "description": "Deprecated compatibility alias for session_delete. Terminate daemon owned agent runtimes selected by selector. Defaults to SIGTERM with a five second grace period.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {
      "grace_secs": {
        "description": "Seconds to wait before SIGKILL. Defaults to 5.",
        "type": "integer"
      },
      "selector": {
        "description": "Session selector to terminate.",
        "type": "string"
      },
      "signal": {
        "description": "Signal to send. Defaults to SIGTERM.",
        "type": "string"
      }
    },
    "required": [
      "selector"
    ],
    "type": "object"
  },
  "name": "agent_delete",
  "outputSchema": {
    "properties": {
      "errors": {
        "items": {
          "type": "object"
        },
        "type": "array"
      },
      "sessions": {
        "items": {
          "type": "object"
        },
        "type": "array"
      }
    },
    "required": [
      "sessions",
      "errors"
    ],
    "type": "object"
  }
}
