crates/sm-cli/tests/snapshots/mcp_schema_snapshot_test__mcp_tool@agent_label.snap
---
source: crates/sm-cli/tests/mcp_schema_snapshot_test.rs
expression: tool
---
{
  "description": "Add or remove one label on sessions selected by selector. Mutations use key=value to set and key- to remove.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {
      "mutation": {
        "description": "Label mutation as key=value or key-.",
        "type": "string"
      },
      "selector": {
        "description": "Session selector to mutate.",
        "type": "string"
      }
    },
    "required": [
      "selector",
      "mutation"
    ],
    "type": "object"
  },
  "name": "agent_label",
  "outputSchema": {
    "properties": {
      "errors": {
        "items": {
          "type": "object"
        },
        "type": "array"
      },
      "sessions": {
        "items": {
          "type": "object"
        },
        "type": "array"
      }
    },
    "required": [
      "sessions",
      "errors"
    ],
    "type": "object"
  }
}
