crates/sm-cli/tests/snapshots/mcp_schema_snapshot_test__mcp_tool@logs.snap
---
source: crates/sm-cli/tests/mcp_schema_snapshot_test.rs
expression: tool
---
{
  "description": "Read the transcript linked to one selected session.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {
      "follow": {
        "description": "CLI only: follow appended transcript bytes.",
        "type": "boolean"
      },
      "max_bytes": {
        "description": "Maximum bytes to return from the end of the transcript.",
        "type": "integer"
      },
      "selector": {
        "description": "Selector that must match exactly one linked session.",
        "type": "string"
      }
    },
    "required": [
      "selector"
    ],
    "type": "object"
  },
  "name": "logs",
  "outputSchema": {
    "properties": {
      "content": {
        "type": "string"
      },
      "session": {
        "type": "object"
      },
      "transcript_path": {
        "type": "string"
      }
    },
    "required": [
      "session",
      "transcript_path",
      "content"
    ],
    "type": "object"
  }
}
