crates/sm-cli/tests/snapshots/mcp_schema_snapshot_test__mcp_tool@mail_read.snap
---
source: crates/sm-cli/tests/mcp_schema_snapshot_test.rs
expression: tool
---
{
  "description": "Read unread mail for sessions selected by selector. Reads mark messages read unless peek is true.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {
      "all_namespaces": {
        "description": "Bypass namespace scoping and read across all namespaces.",
        "type": "boolean"
      },
      "namespace": {
        "description": "Namespace slug to scope this read. Overrides the caller session namespace fallback.",
        "type": "string"
      },
      "peek": {
        "description": "Return unread mail without marking it read.",
        "type": "boolean"
      },
      "selector": {
        "description": "Inbox owner selector used for matching sessions.",
        "type": "string"
      }
    },
    "required": [
      "selector"
    ],
    "type": "object"
  },
  "name": "mail_read",
  "outputSchema": {
    "properties": {
      "errors": {
        "items": {
          "type": "object"
        },
        "type": "array"
      },
      "mail": {
        "items": {
          "type": "object"
        },
        "type": "array"
      }
    },
    "required": [
      "mail"
    ],
    "type": "object"
  }
}
